# Oracle

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
docs/: CLOUD_PROVIDERS.md  COMMANDS.md  INSTALLATION.md
oracle/: main.py
oracle/capture/: capture_window.py
oracle/config/: runtime_config.py
oracle/history/: interaction_logger.py
oracle/llm/: base_client.py  claude_client.py  llm_factory.py  ollama_client.py  openai_client.py  prompt_builder.py
oracle/models/: data_models.py
oracle/ocr/: vision_ocr.py
oracle/typing/: injector.py
oracle/window/: enumerator.py
scripts/: build-release.sh  install-remote.sh
